overflow fix

--- a/mindscapevr_backoffice/src/components/dashboard.css
+++ b/mindscapevr_backoffice/src/components/dashboard.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
 
   font-family: "Montserrat", sans-serif;
-  overflow: hidden;
+  
 }
 
 .admin-dashboard {
